# mlops_test2

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: smoke_sample.parquet
scripts/: make_smoke_sample.py
src/: train.py
src/myproj/: train.py
src/myproj/models/: random_forest.py
src/myproj/pipelines/: pipeline_taxi_duration.py
src/pipelines/: pipeline_taxi_duration.py
src/scripts/: make_smoke_sample.py
src/utils/: io.py
src/utils/preprocessing/: s1.py
