[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myproj"
version = "0.0.1"
description = "Image-first CI with small real-data smoke sample (no LFS)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.2",
  "numpy>=1.22",
  "pandas>=1.5",
  "pyarrow>=10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

