[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myproj"
version = "0.0.1"
description = "Minimal image-first CI with module-relative data and sklearn"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "scikit-learn>=1.0",   # keep broad; we handle RMSE manually for compat
  "numpy>=1.22",
  "pandas>=1.5",
  "pyarrow>=10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
# We ship top-level packages (models, pipelines, utils, scripts) + a top-level module "train"
packages = ["models", "pipelines", "utils", "utils.preprocessing", "scripts"]
py-modules = ["train"]

